kubernetes/network/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
annotations:
  gethomepage.dev/enabled: "true"
  gethomepage.dev/description: Longhorn Cluster Storage Management
  gethomepage.dev/group: Infrastructure
  gethomepage.dev/icon: longhorn
  gethomepage.dev/name: Longhorn
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - longhorn.${CLUSTER_DOMAIN}
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
